fixing sizing of resume on mobile

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -12,6 +12,7 @@
 	width: 600px;
 	height: 100px;
 	margin-top: 10%;
+	padding-bottom:10px;
 	background-color: rgba(100, 100, 100, 0.8);
 	border: 8px solid white;
 	position: absolute;
